@@ -10,6 +10,7 @@
 - The processing speed, including IO operations and database reading received a major upgrade (@guoci).
 - The purity collumn will be always visible in the PSM table.
 - Updated the MSstats report for individual data sets.
+- All reports will now use the I/L replaced peptide sequences insterad of the ones reported by the search engine.
 
 ### Fixed
 - Updated razor mapping rules to reinforce the decoy tagging of razor proteins.
